--- a/ExpandableMenu/Base.lproj/Main.storyboard
+++ b/ExpandableMenu/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="v43-CH-TbI">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -50,6 +50,92 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-353" y="29"/>
+        </scene>
+        <!--FilterVC-->
+        <scene sceneID="bkj-HU-kCj">
+            <objects>
+                <viewController storyboardIdentifier="FilterVC" id="VMm-MW-9zM" customClass="FilterVC" customModule="ExpandableMenu" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3ut-ql-Oh7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="A4J-Cs-1iW">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductTVCell" id="ypE-iA-Hbk" customClass="ProductTVCell" customModule="ExpandableMenu" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ypE-iA-Hbk" id="YIx-aA-rjf">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="s91-Kq-Yzt" customClass="ContentSizedTableView" customModule="ExpandableMenu" customModuleProvider="target">
+                                <rect key="frame" x="225" y="64" width="150" height="178"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="9y8-oe-upe"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FilterByTVCell" id="Npg-d6-a02" customClass="FilterByTVCell" customModule="ExpandableMenu" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="150" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Npg-d6-a02" id="JJ1-Ld-5l5">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.89245772359999997" green="0.58381909129999998" blue="0.27368986610000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="A4J-Cs-1iW" firstAttribute="top" secondItem="Ik9-sh-Fhf" secondAttribute="top" id="9hC-dq-mrq"/>
+                            <constraint firstItem="A4J-Cs-1iW" firstAttribute="bottom" secondItem="Ik9-sh-Fhf" secondAttribute="bottom" id="AY4-dG-1Ac"/>
+                            <constraint firstItem="s91-Kq-Yzt" firstAttribute="top" secondItem="Ik9-sh-Fhf" secondAttribute="top" id="Mm9-il-GBl"/>
+                            <constraint firstItem="s91-Kq-Yzt" firstAttribute="trailing" secondItem="Ik9-sh-Fhf" secondAttribute="trailing" id="eIr-Wr-fii"/>
+                            <constraint firstItem="A4J-Cs-1iW" firstAttribute="leading" secondItem="Ik9-sh-Fhf" secondAttribute="leading" id="hv5-tQ-yvA"/>
+                            <constraint firstItem="A4J-Cs-1iW" firstAttribute="trailing" secondItem="Ik9-sh-Fhf" secondAttribute="trailing" id="k46-VJ-iJh"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Ik9-sh-Fhf"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="CQZ-L2-9Ib">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="search" id="f6o-KX-eIM">
+                            <connections>
+                                <action selector="openFilterMen:" destination="VMm-MW-9zM" id="ke5-nR-Obl"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="fil" destination="s91-Kq-Yzt" id="3DA-CE-lJY"/>
+                        <outlet property="openFilteredTapped" destination="f6o-KX-eIM" id="LmY-08-byY"/>
+                        <outlet property="productsTV" destination="A4J-Cs-1iW" id="MVY-On-Zwf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cPX-VS-76q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1712.8" y="75.112443778110944"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="IWD-dR-Hsp">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="v43-CH-TbI" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="R6c-yS-gWA">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="VMm-MW-9zM" kind="relationship" relationship="rootViewController" id="D4q-3d-ubi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cAm-HK-Hym" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="493.60000000000002" y="94.902548725637189"/>
         </scene>
     </scenes>
 </document>
